--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的个人主页</title>
+    <title>NACO的个人主页</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div class="logo">我的世界</div>
+        <div class="logo">NACO的世界</div>
         <nav>
             <ul>
                 <li><a href="#">首页</a></li>
